--- a/package.json
+++ b/package.json
@@ -2,26 +2,36 @@
   "name": "react-test",
   "version": "0.1.0",
   "private": true,
+  "scripts": {
+    "start": "webpack serve",
+    "test": "jest",
+    "watch": "jest --watchAll",
+    "lint": "eslint --fix --ext js,jsx ."
+  },
   "dependencies": {
+    "axios": "^0.20.0",
+    "react": "^17.0.2",
+    "react-dom": "^16.13.1",
+    "react-redux": "^7.2.1",
+    "redux": "^4.0.5",
+    "redux-thunk": "^2.3.0"
+  },
+  "devDependencies": {
+    "@babel/core": "^7.11.6",
+    "@babel/preset-env": "^7.11.5",
+    "@babel/preset-react": "^7.10.4",
     "@testing-library/jest-dom": "^5.11.4",
     "@testing-library/react": "^11.1.0",
-    "@testing-library/user-event": "^12.1.10",
-    "react": "^17.0.2",
-    "react-dom": "^17.0.2",
-    "react-scripts": "4.0.3",
-    "web-vitals": "^1.0.1"
-  },
-  "scripts": {
-    "start": "react-scripts start",
-    "build": "react-scripts build",
-    "test": "react-scripts test",
-    "eject": "react-scripts eject"
-  },
-  "eslintConfig": {
-    "extends": [
-      "react-app",
-      "react-app/jest"
-    ]
+    "@types/jest": "^26.0.14",
+    "babel-jest": "^26.5.2",
+    "babel-loader": "^8.1.0",
+    "eslint": "^7.11.0",
+    "jest": "^26.5.3",
+    "jest-plugin-context": "^2.9.0",
+    "redux-mock-store": "^1.5.4",
+    "webpack": "^5.1.0",
+    "webpack-cli": "^4.0.0",
+    "webpack-dev-server": "^3.11.0"
   },
   "browserslist": {
     "production": [
