--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "name": "react-test",
   "version": "0.1.0",
   "private": true,
+  "main": "index.js",
   "scripts": {
     "start": "webpack serve",
     "test": "jest",
@@ -26,6 +27,11 @@
     "babel-jest": "^26.5.2",
     "babel-loader": "^8.1.0",
     "eslint": "^7.11.0",
+    "eslint-config-airbnb": "^18.2.0",
+    "eslint-plugin-import": "^2.22.1",
+    "eslint-plugin-jsx-a11y": "^6.3.1",
+    "eslint-plugin-react": "^7.21.4",
+    "eslint-plugin-react-hooks": "^4.1.2",
     "jest": "^26.5.3",
     "jest-plugin-context": "^2.9.0",
     "redux-mock-store": "^1.5.4",
