--- a/js-basic/package.json
+++ b/js-basic/package.json
@@ -1,9 +1,12 @@
 {
   "dependencies": {
     "@types/jest": "^27.0.3",
-    "jest": "^27.4.3"
+    "jest": "^27.4.3",
+    "nodemon": "^2.0.15"
   },
   "scripts": {
-    "watch": "jest --watchAll --verbose"
+    "watch:verbose": "jest --watchAll --verbose",
+    "watch": "jest --watchAll",
+    "dev": "nodemon index.js"
   }
 }
