--- a/rtl-tutorial/package.json
+++ b/rtl-tutorial/package.json
@@ -71,7 +71,7 @@
   "scripts": {
     "start": "node scripts/start.js",
     "build": "node scripts/build.js",
-    "test": "node scripts/test.js"
+    "test": "node scripts/test.js --watch"
   },
   "eslintConfig": {
     "extends": [
